party fix(multi arena)